Adding menu to share image and logging out

--- a/app/src/main/res/layout/fragment_share_picture_tab.xml
+++ b/app/src/main/res/layout/fragment_share_picture_tab.xml
@@ -45,10 +45,8 @@
         android:text="@string/share_image"
         android:textAllCaps="false"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtDescription"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
