--- a/app/src/main/res/layout/fragment_users_tab.xml
+++ b/app/src/main/res/layout/fragment_users_tab.xml
@@ -11,7 +11,7 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
