--- a/app/src/main/res/layout/fragment_share_picture_tab.xml
+++ b/app/src/main/res/layout/fragment_share_picture_tab.xml
@@ -13,11 +13,11 @@
         android:layout_width="0dp"
         android:layout_height="237dp"
         android:layout_marginTop="36dp"
-        android:src="@drawable/tiger"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/black_camera" />
 
     <EditText
         android:id="@+id/edtDescription"
