--- a/app/src/main/res/layout/my_toolbar.xml
+++ b/app/src/main/res/layout/my_toolbar.xml
@@ -2,8 +2,10 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/myToolbar"
     android:background="@color/purple_500"
+    app:titleTextColor="@color/white"
     android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
 
 </androidx.appcompat.widget.Toolbar>
